hphp/hack/test/typecheck/invalid_as_nothing.php.exp
WARN: File "invalid_as_nothing.php", line 5, characters 3-15:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `mixed` which shares no values with `nothing`. (Warn[12012])
ERROR: File "invalid_as_nothing.php", line 5, characters 9-15:
Invalid `as` expression hint (Typing[4195])
  File "invalid_as_nothing.php", line 5, characters 9-15:
  The `as` operator cannot be used with the `nothing` type
