hphp/hack/test/typecheck/invalid_as_nothing.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function test(mixed $x): void {
  $x as nothing;
}
